syntax = "proto2";

package protobuf;

enum CompressionType {
  // Values should match with the corresponding struct in cstore_fdw.h
  NONE = 0;
  PG_LZ = 1;
};

message ColumnBlockSkipNode {
  optional uint64 rowCount = 1;
  optional bytes minimumValue = 2;
  optional bytes maximumValue = 3;
  optional uint64 valueBlockOffset = 4;
  optional uint64 valueLength = 5;
  optional CompressionType valueCompressionType = 6;
  optional uint64 existsBlockOffset = 7;
  optional uint64 existsLength = 8;
}

message ColumnBlockSkipList {
  repeated ColumnBlockSkipNode blockSkipNodeArray = 1;
}
